<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/texto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/otra" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/otraMas" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suma" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto2"  />

    <Button
        android:id="@+id/boton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/log1" />

    <Button
        android:id="@+id/boton5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/log2"  />

</LinearLayout>