<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textoCabecera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicioLog2" />

    <TextView
        android:id="@+id/textoArriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/arriba"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/parametro2"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number" />

    <TextView
        android:id="@+id/textoAbajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/abajo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/parametro3"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <Button
        android:id="@+id/botonSuma"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/botSuma" />

</LinearLayout>